--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="root">
 
     </div>
-    <script defer src="./src/app.js"></script>
+    <script defer src="./src/app.ts"></script>
 </body>
 
 </html>
